--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-DB_HOST='db'
-DB_USER='kenzinho'
-DB_PASSWORD='1234'
-DB='db_book_pub'
+DATABASE_URL = "postgres://user:password@localhost:5432/db"
 
-SECRET_KEY='minhachavesupersecreta'
+SECRET_KEY=''
