--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest",
+    "start": "node dist/app.js"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
