--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-DB_HOST='db'
-DB_USER='kenzinho'
-DB_PASSWORD='1234'
-DB='db_book_pub'
-
-SECRET_KEY='minhachavesupersecreta'
+DB_HOST=''
+DB_USER='
+DB_PASSWORD=''
+DB=''
+SECRET_KEY=''
+DATABASE_URL = "postgres://user:password@localhost:5432/db"
